# Heart_Desease_Prediction_Machine

./: Máquina_preditiva_para_doenças_cardiacas.ipynb  README.md  index.html  main.py  pyproject.toml
Basic version/: Máquina_preditiva_para_doenças_cardiacas.ipynb  heart_data.csv
Data Wrangling/: Heart_risk_prediction Cleaning.ipynb
Modelling/: Heart_risk_prediction Modelling.ipynb  Report  random_forest.plk
